fix: env.example

--- a/env.example
+++ b/env.example
@@ -2,3 +2,7 @@ OPEN_WEATHER_GEOCODING_URL= "OPEN_WEATHER_GEOCODING_URL"
 OPEN_WEATHER_MAP_URL = "OPEN_WEATHER_MAP_URL"
 OPEN_WEATHER_KEY= "OPEN_WEATHER_KEY"
 PORT=PORT
+SPOTIFY_CLIENT_ID=SPOTIFY_CLIENT_ID
+SPOTIFY_CLIENT_SECRET=SPOTIFY_CLIENT_SECRET
+SPOTIFY_ACCESS_TOKEN_URL="SPOTIFY_ACCESS_TOKEN_URL"
+SPOTIFY_API_URL="SPOTIFY_API_URL"
