--- a/package.json
+++ b/package.json
@@ -6,18 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prepare": "npm run config",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "build": "nest build",
     "start:dev": "nest start --watch",
-    "config": "npm install --save-dev husky @commitlint/cli @commitlint/config-conventional && npx husky install && npm i -D @compodoc/compodoc",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --config ./test/jest.json",
-    "test:watch": "jest --config ./test/jest.json --watch",
-    "test:cov": "jest --config ./test/jest.json --coverage --detectOpenHandles",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start:prod": "node dist/main",
+    "build": "nest build",
+    "test": "jest",
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:cov": "jest --coverage"
   },
   "dependencies": {
     "@fastify/static": "^6.9.0",
